@@ -6,8 +6,8 @@ Bot::IRC::X::Retort - Bot::IRC plugin for bot-retorting to key words
 
 version 1.03
 
-[![Build Status](https://travis-ci.org/gryphonshafer/Bot-IRC-X-Retort.svg)](https://travis-ci.org/gryphonshafer/Bot-IRC-X-Retort)
-[![Coverage Status](https://coveralls.io/repos/gryphonshafer/Bot-IRC-X-Retort/badge.png)](https://coveralls.io/r/gryphonshafer/Bot-IRC-X-Retort)
+[![build](https://github.com/gryphonshafer/Bot-IRC-X-Retort/workflows/build/badge.svg)](https://github.com/gryphonshafer/Bot-IRC-X-Retort/actions?query=workflow%3Abuild)
+[![codecov](https://codecov.io/gh/gryphonshafer/Bot-IRC-X-Retort/graph/badge.svg)](https://codecov.io/gh/gryphonshafer/Bot-IRC-X-Retort)
 
 # SYNOPSIS
 
@@ -20,7 +20,7 @@ version 1.03
 
 # DESCRIPTION
 
-This [Bot::IRC](https://metacpan.org/pod/Bot::IRC) plugin is for bot-retorting to key words.
+This [Bot::IRC](https://metacpan.org/pod/Bot%3A%3AIRC) plugin is for bot-retorting to key words.
 
     retort <term> with <retort string>
     retort <term> clear
@@ -29,13 +29,11 @@ This [Bot::IRC](https://metacpan.org/pod/Bot::IRC) plugin is for bot-retorting t
 
 You can look for additional information at:
 
-- [Bot::IRC](https://metacpan.org/pod/Bot::IRC)
+- [Bot::IRC](https://metacpan.org/pod/Bot%3A%3AIRC)
 - [GitHub](https://github.com/gryphonshafer/Bot-IRC-X-Retort)
-- [CPAN](http://search.cpan.org/dist/Bot-IRC-X-Retort)
 - [MetaCPAN](https://metacpan.org/pod/Bot::IRC::X::Retort)
-- [AnnoCPAN](http://annocpan.org/dist/Bot-IRC-X-Retort)
-- [Travis CI](https://travis-ci.org/gryphonshafer/Bot-IRC-X-Retort)
-- [Coveralls](https://coveralls.io/r/gryphonshafer/Bot-IRC-X-Retort)
+- [GitHub Actions](https://github.com/gryphonshafer/Bot-IRC-X-Retort/actions)
+- [Codecov](https://codecov.io/gh/gryphonshafer/Bot-IRC-X-Retort)
 - [CPANTS](http://cpants.cpanauthors.org/dist/Bot-IRC-X-Retort)
 - [CPAN Testers](http://www.cpantesters.org/distro/T/Bot-IRC-X-Retort.html)
 
@@ -45,7 +43,7 @@ Gryphon Shafer <gryphon@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2018 by Gryphon Shafer.
+This software is copyright (c) 2021 by Gryphon Shafer.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
