@@ -1,6 +1,8 @@
 Revision history for Bot::IRC::X::Retort
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
         - Update Travis YAML
         - Adding Perl versions to test; annual general update for 2018
 
